update graph
