# server/docs/swagger.yaml
@@ -1,5 +1,23 @@
 basePath: /
 definitions:
+  model.GetAllStockCodeResponse:
+    properties:
+      stock_list:
+        example:
+        - '[''000001'''
+        - ' ''002142'''
+        - ' ...]'
+        items:
+          type: string
+        type: array
+    type: object
+  model.GetQueryStockDataRequest:
+    properties:
+      stock_list:
+        items:
+          type: string
+        type: array
+    type: object
   model.GetQueryStockDataResponse:
     properties:
       stock_datas:
@@ -16,6 +34,12 @@ definitions:
       high:
         type: number
       low:
+        type: number
+      ma13:
+        type: number
+      ma34:
+        type: number
+      ma55:
         type: number
       money:
         type: number
@@ -44,6 +68,18 @@ info:
   title: Stock-Show Web API
   version: "1.0"
 paths:
+  /api/stock/getAllStockCode:
+    get:
+      description: Return All Stock Code
+      operationId: getAllStockCode
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.GetAllStockCodeResponse'
+      summary: Query All Stock Code
   /api/stock/getDailyStockData:
     get:
       consumes:
@@ -62,6 +98,13 @@ paths:
       - application/json
       description: Return Strategy Sepcific Computed Data
       operationId: getQueryStockData
+      parameters:
+      - description: Query Stock List
+        in: body
+        name: request_json
+        required: true
+        schema:
+          $ref: '#/definitions/model.GetQueryStockDataRequest'
       produces:
       - application/json
       responses:
